--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <div class="topbar">
-<img src="https://ia801400.us.archive.org/17/items/screen-shot-2021-10-06-at-11.59.17-am/Screen%20Shot%202021-10-06%20at%2011.59.17%20AM.png" class="topimg">
-<div class="toptxt"><b>RykerStore</b></div>
+<img src="https://pbs.twimg.com/profile_images/1451452607818469379/bP3_Lkk3_400x400.jpg" class="topimg">
+<div class="toptxt"><b>iDevice</b></div>
 <div class="dots1">..</div>
 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search">
 
